# SmolSearch

./: Dockerfile  README.md  pyproject.toml
backend/: ai_tools.py  app_mcp.py  llm.py  main.py  prompts.py  utils.py
bonus/: main.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: chatbox.tsx
frontend/src/components/ui/: spinner.tsx
